iac/kubernetes/test/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-deployment
  namespace: webservices
  labels:
    k8s-app: ws-deployment
  annotations:
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
      k8s-app: ws-deployment
  template:
    metadata:
      labels:
        app: webservice
        k8s-app: ws-deployment
    spec:
      containers:
      - name: webservice
        image: eu.gcr.io/slavayssiere-sandbox/api-test:0.0.9
        imagePullPolicy: Always
        env:
        - name: PREFIX_PATH
          value: /
        - name: JAEGER_SERVICE_NAME
          value: app-test
        - name: JAEGER_SAMPLER_MANAGER_HOST_PORT
          value: http://localhost:5778/
        - name: MYSQL_HOST
          value: "bdd.dev-2.internal.lp"
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              name: test-user-secret
              key: user
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: test-user-secret
              key: password
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              name: test-user-secret
              key: database
        ports:
        - containerPort: 8080
          name: rest-api-ws
        resources:
          limits:
            memory: "40Mi"
            cpu: "20m"
          requests:
            memory: "40Mi"
            cpu: "20m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
