iac/kubernetes/test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  namespace: webservices
  labels:
    app: webservice
    k8s-app: ws-deployment
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: rest-api-ws
  selector:
    app: webservice
    k8s-app: ws-deployment
