iac/kubernetes/test/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-deployment
  labels:
    k8s-app: ws-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
      k8s-app: ws-deployment
  template:
    metadata:
      labels:
        app: webservice
        k8s-app: ws-deployment
    spec:
      containers:
      - name: webservice
        image: eu.gcr.io/slavayssiere-sandbox/api-test:0.0.3
        env:
        - name: PREFIX_PATH
          value: /
        ports:
        - containerPort: 8080
          name: rest-api-ws
        resources:
          limits:
            memory: "40Mi"
            cpu: "20m"
          requests:
            memory: "40Mi"
            cpu: "20m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  labels:
    app: webservice
    k8s-app: ws-deployment
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: rest-api-ws
  selector:
    app: webservice
    k8s-app: ws-deployment
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public-ingress
spec:
  rules:
  - host: dev-2.gcp-wescale.slavayssiere.fr
    http:
      paths:
      - backend:
          serviceName: ws-service
          servicePort: 8080
